[tool.poetry]
name = "house_price_prediction"
version = "0.1.0"
description = ""
authors = ["Somen <somenbg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"
matplotlib = "^3.3"
seaborn = "^0.10.1"
sklearn = "^0.0.0"
statsmodels = "^0.11.1"
tqdm = "^4.48"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
